# sqlglot-maxcompute

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-03-13-maxcompute-dialect-design.md  2026-03-23-maxcompute-properties-design.md
src/sqlglot_maxcompute/: __init__.py  maxcompute.py
tests/: test_maxcompute.py
