[project]
name = "sqlglot-maxcompute"
version = "0.1.0"
description = "MaxCompute dialect plugin for SQLGlot"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "azurechen97", email = "jhcax126@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlglot>=29.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.entry-points."sqlglot.dialects"]
maxcompute = "sqlglot_maxcompute.maxcompute:MaxCompute"
