[project]
name = "sqlglot-maxcompute"
version = "0.1.0"
description = "MaxCompute dialect plugin for SQLGlot"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "azurechen97", email = "jhcax126@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlglot>=29.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/azurechen97/sqlglot-maxcompute"
Repository = "https://github.com/azurechen97/sqlglot-maxcompute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.entry-points."sqlglot.dialects"]
maxcompute = "sqlglot_maxcompute.maxcompute:MaxCompute"
